# ruflo-os

./: .editorconfig  BUILD.md  Cargo.toml  STATUS.md  package.json  pyproject.toml  requirements.txt  update_ci.py  write_ci.py
.devcontainer/: devcontainer.json
.github/workflows/: build-iso.yml  build-iso.yml.disabled  ci.yml  model-update.yml  release.yml
Binance-Trader/: Start PRADY TRADER.bat  mypy.ini  pyrightconfig.json
Binance-Trader/prady-trader/: .env.example  .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  main.py  provider_status_counts.txt  pyrightconfig.json  pytest_full.txt  requirements.txt  run_desktop.py
Binance-Trader/prady-trader/agents/: __init__.py  arbiter_agent.py  base_agent.py  debater_agent.py  executor_agent.py  oracle_agent.py  oracle_extended_agent.py  prophet_agent.py  sentinel_agent.py  strategy_fusion_agent.py  warden_agent.py
Binance-Trader/prady-trader/config/: constants.py  mode_policy.py  settings.py
OS/ruflo-os/: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pnpm-workspace.yaml  requirements-vertical.txt
OS/ruflo-os/control-plane/: .env.example  Dockerfile  README.md  pyproject.toml
OS/ruflo-os/control-plane/src/ruflo_control_plane/: __init__.py  main.py
OS/ruflo-os/control-plane/src/ruflo_control_plane/api/: tasks.py
OS/ruflo-os/control-plane/src/ruflo_control_plane/approval/: __init__.py  broker.py
OS/ruflo-os/control-plane/src/ruflo_control_plane/orchestrator/: engine.py
OS/ruflo-os/control-plane/src/ruflo_control_plane/policy/: evaluator.py  rules.py
OS/ruflo-os/control-plane/tests/: test_control_plane.py
OS/ruflo-os/model-gateway/: README.md  pyproject.toml
OS/ruflo-os/model-gateway/src/ruflo_model_gateway/: metrics.py
OS/ruflo-os/model-gateway/src/ruflo_model_gateway/api/: health.py  routes.py
OS/ruflo-os/model-gateway/src/ruflo_model_gateway/providers/: anthropic.py  openai_provider.py  vllm.py
OS/ruflo-os/model-gateway/src/ruflo_model_gateway/routing/: router.py
OS/ruflo-os/ruflo-shell/compositor/: meson.build
OS/ruflo-os/runtime/: README.md  pyproject.toml
OS/ruflo-os/runtime/src/ruflo_runtime/: __init__.py  events.py
OS/ruflo-os/runtime/src/ruflo_runtime/brokers/: __init__.py
OS/ruflo-os/runtime/src/ruflo_runtime/nemoclaw/: __init__.py
accessibility/: .env.example  pyproject.toml
accessibility/src/ruflo_accessibility/: api.py
accessibility/src/ruflo_accessibility/atspi/: __init__.py  client.py
accessibility/src/ruflo_accessibility/wayland/: __init__.py  injector.py
agents/: README.md  pyproject.toml
agents/conductor/src/: runtime.py
agents/src/ruflo_agents/: __init__.py  base.py
agents/src/ruflo_agents/browser/: __init__.py  agent.py
agents/src/ruflo_agents/coding/: __init__.py
agents/src/ruflo_agents/file/: __init__.py
agents/src/ruflo_agents/gui_operator/: agent.py
agents/src/ruflo_agents/hermes_adapter/: __init__.py
agents/src/ruflo_agents/recovery/: __init__.py  hooks.py
agents/src/ruflo_agents/ruflo_adapter/: __init__.py  adapter.py
agents/src/ruflo_agents/verifier/: __init__.py
agents/tests/: test_agents.py
api/routes/: __init__.py  agent.py  history.py
api/websocket/: __init__.py
control-plane/: docker-compose.yml
distro/: README.md  wsl-setup-and-build.sh
distro/calamares/: settings.conf
distro/live-build/: build-iso.sh
distro/systemd/: ruflo-accessibility.service  ruflo-control-plane.service  ruflo-model-gateway.service
docker/: Dockerfile.api  Dockerfile.nemoclaw  Dockerfile.ruflo-agent
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  MIGRATION_GUIDE.md  MONOREPO_STRUCTURE.md  NemOS_ARCHITECTURE.md  WAYLAND_AUTOMATION_STRATEGY.md  integration-status.md
docs/architecture/: decisions.md
hermes-integration/: __init__.py  agentnet_bridge.py  audit_logger.py  hermes_client.py  skill_factory.py
infra/ostree/: README.md
init-system/boot/: ruflo-boot.sh
init-system/service-manager/: ruflo-shell.service
installer/: ruflo-installer.sh
installer/iso-builder/: build-iso.sh
installer/package-manager/: ruflo-pkg-db.json
kernel/config/: ruflo_defconfig
kernel/configs/: ruflos-defconfig
kernel/patches/: 0001-ai-bridge-module.patch  series
model-gateway/: .env.example  Dockerfile
model-gateway/tests/: test_api.py
model-hub/: default_models.yaml  quantizer.py
nemoclaw/: Dockerfile  __init__.py  requirements.txt
nemoclaw/blueprint/: __init__.py
nemoclaw/core/: nemoclaw_daemon.py  policy_engine.py  sandbox_manager.py
nemoclaw/models/: __init__.py
nemoclaw/registry/: model_registry.json  registry_manager.py
nemoclaw/security/: __init__.py  syscall_allowlist.txt
nemoclaw/tests/: test_dummy.py
observability/: README.md
observability/dashboards/: dashboards.yml
observability/ebpf-probes/: ruflo_exec_probe.c
observability/metrics/: prometheus.yml
observability/traces/: otel-config.yml
ruflo-agent/: __init__.py  agent.config.yaml  pyproject.toml  requirements.txt
ruflo-agent/core/: agent_runtime.py  memory_manager.py  task_planner.py  tool_executor.py
ruflo-agent/perception/: screen_parser.py
ruflo-agent/plugins/: __init__.py
ruflo-agent/skills/: email_management.skill
ruflo-agent/tools/: app_launcher.py  base_tool.py  cursor_control.py  keyboard_control.py  window_manager.py
ruflo-agent/workflows/: __init__.py
ruflo-shell/: __init__.py  main.py
ruflo-shell/compositor/: ruflo-compositor.c  ruflo-compositor.h
ruflo-shell/window-manager/: animations.py
runtime/crates/ruflo-sandbox-core/: Cargo.toml
runtime/crates/ruflo-sandbox-core/src/: main.rs
runtime/tests/: test_runtime.py
scripts/: run-ruflo.sh  run-vertical-slice.sh  setup-dev.sh
shell/: install.sh
shell/cli/: pyproject.toml
shell/dock/: panel-config.js
shell/launcher/: ruflo-launcher.desktop  ruflo-spotlight.py
shell/plasma-theme/: defaults  metadata.json
tests/benchmarks/: __init__.py  benchmark_suite.py
tests/desktop/: test_desktop.py
tests/e2e/: __init__.py
tests/integration/: test_integration.py
tests/unit/: test_ruflo_agent.py
(+318 files in other folders)
