[project]
name = "ruflo-accessibility"
version = "0.1.0"
description = "GUI automation layer for Ruflo OS — AT-SPI, ydotool, xdotool, VLM grounding"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruflo_accessibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
