[project]
name = "ruflo-cli"
version = "0.1.0"
description = "Command-line interface for Ruflo OS Control Plane"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
ruflo = "ruflo_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
