[project]
name = "ruflo-runtime"
version = "0.1.0"
description = "Secure sandbox runtime, NemoClaw bridge, and resource brokers for Ruflo OS"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ruflo_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
